--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -1,16 +1,16 @@
 {
-  "homepage": "https://shrisudhan97.github.io/IETE",
+  "homepage": "https://<Username>.github.io/<Repository-name>",
   "name": "vite-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    		"deploy": "gh-pages -d dist" ,
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build" 
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.3.1",
